SF Primes/src/objects/Blacklist_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Blacklisted_Word_or_Expression__c</fullName>
        <description>Stores the word or custom expression which triggered the breach.</description>
        <label>Blacklisted Word or Expression</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breached_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will used to store the user name who posted the Blacklisted Word or Phrase.</description>
        <label>Breached By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Blacklist_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unscrubbed_Post__c</fullName>
        <description>The original post that the user posted.</description>
        <label>Unscrubbed Post</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Blacklist Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Blacklisted_Word_or_Expression__c</columns>
        <columns>Breached_By__c</columns>
        <columns>Unscrubbed_Post__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Blacklisted_Word_or_Expression__c</columns>
        <columns>Breached_By__c</columns>
        <columns>Unscrubbed_Post__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Blacklisted_Word_or_Expression__c</columns>
        <columns>Breached_By__c</columns>
        <columns>Unscrubbed_Post__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BLA-{0000}</displayFormat>
        <label>Blacklist Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklist Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>